# <https://github.com/llvm/llvm-project/blob/llvmorg-14.0.6/llvm/CMakeLists.txt>
cmake_minimum_required(VERSION 3.13.4)
project(SYsU-lang VERSION 12.0.0.20230529)
include(CPack)
include(CTest)
add_subdirectory(compiler)
add_subdirectory(preprocessor)
add_subdirectory(lexer)
add_subdirectory(parser)
add_subdirectory(generator)
add_subdirectory(optimizer)
add_subdirectory(translator)
add_subdirectory(linker)
add_subdirectory(librarian)
add_subdirectory(tester)
