project(sysu-generator)
find_package(LLVM REQUIRED)
add_executable(${PROJECT_NAME} main.cc)
llvm_map_components_to_libnames(LLVM_LIBS core support)
target_link_libraries(${PROJECT_NAME} ${LLVM_LIBS})
target_include_directories(${PROJECT_NAME} PRIVATE ${LLVM_INCLUDE_DIRS})
install(TARGETS ${PROJECT_NAME})
