SET(libs sysy;sysu)
FOREACH(lib IN LISTS libs)
    FILE(GLOB mains ${lib}/*.cc)
    ADD_LIBRARY(${lib} SHARED ${mains})
    INSTALL(TARGETS ${lib})
    FILE(GLOB mains ${lib}/*.h)
    FOREACH(mainfile ${mains})
        INSTALL(FILES ${mainfile} DESTINATION include/${lib})
    ENDFOREACH()
ENDFOREACH()